// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: MessageEvents getMessageHistory allows overriding "to" param 1`] = `
Object {
  "meta": Object {
    "method": "GET",
    "params": Object {
      "from": "2018-02-01T10:10",
      "message_ids": "abcd,efgh",
      "to": "OVERRIDDEN_TO",
    },
    "url": "/message-events",
  },
  "type": "GET_MESSAGE_HISTORY",
}
`;

exports[`Action Creator: MessageEvents getMessageHistory makes api call with defaults 1`] = `
Object {
  "meta": Object {
    "method": "GET",
    "params": Object {
      "from": "2018-02-01T10:10",
      "message_ids": "abcd,efgh",
      "to": "2018-02-01T10:10",
    },
    "url": "/message-events",
  },
  "type": "GET_MESSAGE_HISTORY",
}
`;
